--- a/week-6/exercise/styles/_variables.scss
+++ b/week-6/exercise/styles/_variables.scss
@@ -1,4 +1,6 @@
-$base-font:;
-$line-height:;
-$serif:;
-$sans-serif:;
+//base
+
+$base-font: 1em;
+$line-height: 1.6;
+$serif: 'Arvo', serif;
+$sans-serif: 'Open Sans', sans-serif;
